<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:color="?attr/bottomNavigationStyle" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/baseline_bookmarks_24"
        android:title="@string/title_favorites"
        android:color="?attr/bottomNavigationStyle" 
        />
    
    <item 
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_app_settings_alt_24"
        android:title="@string/title_settings"
        android:color="?attr/bottomNavigationStyle" />
</menu>